[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/backgroud.png" type="Texture" id=1]
[ext_resource path="res://sprites/laser-room.png" type="Texture" id=2]
[ext_resource path="res://scripts/gamemode_selection.gd" type="Script" id=3]
[ext_resource path="res://sprites/difficulty.png" type="Texture" id=4]
[ext_resource path="res://sprites/ball.png" type="Texture" id=5]
[ext_resource path="res://sprites/shield.png" type="Texture" id=6]
[ext_resource path="res://sprites/go_back.png" type="Texture" id=7]
[ext_resource path="res://scripts/triangle_generator.gd" type="Script" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 513.498, 301.498 )
scale = Vector2( 10, 10 )
texture = ExtResource( 1 )

[node name="lr_button" type="TouchScreenButton" parent="."]
position = Vector2( 391.6, 80 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 2 )

[node name="Label" type="Label" parent="lr_button"]
margin_top = 990.0
margin_right = 240.8
margin_bottom = 1015.0
rect_scale = Vector2( 5, 5 )
text = "Laser Room"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choose_gm_label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 60.0
text = "Choose a game mode "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choose_diff_lr" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="hard_mode" type="TouchScreenButton" parent="choose_diff_lr"]
position = Vector2( 44, 0 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )

[node name="easy_mode" type="TouchScreenButton" parent="choose_diff_lr"]
position = Vector2( -300, 0 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 6 )

[node name="close" type="TouchScreenButton" parent="choose_diff_lr"]
position = Vector2( 295, -405 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 5 )

[node name="triangle_generator_left" type="Node2D" parent="."]
position = Vector2( 55, -88.5 )
script = ExtResource( 8 )

[node name="triangle_generator_left2" type="Node2D" parent="."]
position = Vector2( 968, 688.5 )
rotation = 3.14159
script = ExtResource( 8 )

[node name="go_back_button" type="TouchScreenButton" parent="."]
position = Vector2( 200, 40 )
normal = ExtResource( 7 )

[connection signal="released" from="lr_button" to="." method="laser_room"]
[connection signal="released" from="choose_diff_lr/hard_mode" to="." method="hard_mode_lr"]
[connection signal="released" from="choose_diff_lr/easy_mode" to="." method="easy_mode_lr"]
[connection signal="released" from="choose_diff_lr/close" to="." method="close_diff_choose_lr"]
[connection signal="released" from="go_back_button" to="." method="go_back"]
